asset/styles.css
body {
    font-family: "sans", serif;
    background-color: #23242b;
  }
  p {
    color: grey;
  }
  h5 {
    color: grey;
  }
.container{
    display: flex;
    flex-direction: row;
    height: 100vh;
    margin: 0;
 
}
.navbar{
    background-color:#2d3035;
    width: 25%;
    border-right: 2px solid grey;
    position: sticky;
    min-width: 220px;
}
.home{
    width: 100%;
    overflow-y:auto;

}

.dashboard{
    display: flex;
    flex-direction: row;
    align-items: center;
   
    padding:15px

}
.dashboard-text{
    margin-left: 10px;
    font-size: 25px;
    font-weight: 500;
    color:grey
}

.nav-options{
   

}
.option{
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-left: 15px;
    height: 50px;
    color:grey
    

}
div.option:hover{
    border-left: 5px solid red;
    opacity: 0.8;
    cursor: pointer;
    color: red;
    background-color: rgba(255, 0, 0,0.1);
}
.option-text{
    font-size: 20px;
    margin-left: 30px;
}

.search-bar-and-profile{
    display: flex;
    flex-direction: row;
    padding: 15px;
    align-items: center;
    justify-content: space-between;
    min-width: 1000px;

}
.search-bar{
    margin-left: 40px;
}

input{
  width: 550px;

  height: 20px;
  border-radius: 15px;
  margin-left: 5px;
  background-color:gray;
}
.profile{
    display: flex;
    flex-direction: row;
    align-items: center;
    min-width: 300px;
}
.profile-image{
    height: 45px;
    width:45px;
    border-radius: 100px;
    margin-left: 20px;
    margin-right: 10px;
}
.proflie-name{
    font-weight: 700;
    color:#7f7f7f
}
.large-profile-image{
    height: 60px;
    width:60px;
    border-radius: 100px;
    margin-right: 10px;

}
.title{
   
    display: flex;
    flex-direction: row;
    padding-top: 10px;
    color: grey;
    font-weight: 600;
    font-size: large;
    padding-bottom: 10px;
    background-color: #23242b;
        
}
.greatings-and-buttons{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid grey;
    padding-bottom: 10px;
}
.greating{
    display: flex;
    flex-direction: row;
    margin-left: 45px;
    align-items: center;
}
.buttons{
    display: flex;
    flex-direction: row;
    min-width: 400px;
    justify-content: space-around;
    margin-right: 50px;
}
.button{
    width: 110px;
    height: 40px;
    border: 2px solid gray;
    border-radius: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    color:grey;
    font-weight: bold;
}
.button:hover{
    border: 2px solid white;
    color: white;
}

.projects-annoucements-peoples{
    display: flex;
    flex-direction: row;
    height: 100vh;
    background-color: #23242b;
}
.projects{
    background-color:#23242b;
    width: 70%;
    display:flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    max-height: 50px;
}
.annoucements-peoples{
    background-color: 23242b;
    width: 30%;
}


.project-card{
    background-color: #2d3035;
    max-width: 350px;
    border-radius: 10px;
    padding:8px;
    border-left:10px solid #5d4093;
    height: 150px;
    min-width: 250px;
    margin: 5px;
}
.card-text{
    font-size: small;
    margin-top:-10px
}
.icons{
    margin-top: 30px;
    display: flex;
    flex-direction: row-reverse;
    color:grey
}

.annoucements-peoples{
   
    display: flex;
   flex-direction: column;
}
.annoucements{
   background-color: #2d3035;
   border-radius: 10px;
   padding: 20px;
width: 70%;
height: fit-content;
min-width: 200px;
}
.annoucement{
    
    border-bottom: 2px solid gray;
    padding:10px;
}
.peoples{
    background-color: #2d3035;
    border-radius: 10px;
    width: 73%;
    padding: 15px;
min-width: 200px;


}
.people{
    display: flex;
    flex-direction: row;
    padding-left:10px;
    padding-right: 10px;
    align-items:center;
    padding-bottom: 5px;


}
.profile-icon{
    font-size: 22px; color: green;
    
}

.people-image{
    border-radius: 100px;
    height: 50px;
    width: 50px;
    margin-right: 30px;
}
.people-name{
    color: #bababd;
    font-weight: bold;
    font-size: medium;
}

